--- a/index.html
+++ b/index.html
@@ -313,6 +313,7 @@
         .blogs {
             padding: 4rem 0;
             background: linear-gradient(to bottom, var(--background), #0c1425);
+            min-height: 50vh;
         }
 
         .blog-grid {
@@ -383,6 +384,8 @@
         /* Skills Section */
         .skills {
             padding: 4rem 0;
+            background: var(--background);
+            min-height: 50vh;
         }
 
         .skills-grid {
@@ -417,6 +420,7 @@
         .contact {
             padding: 4rem 0;
             background: linear-gradient(to bottom, #0c1425, var(--background));
+            min-height: 40vh;
         }
 
         .contact-grid {
@@ -514,36 +518,7 @@
             overflow: hidden;
         }
 
-        .cert-item::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: -100%;
-            width: 100%;
-            height: 100%;
-            background: linear-gradient(90deg, transparent, rgba(6, 182, 212, 0.1), transparent);
-            transition: left 0.6s;
-        }
 
-        .cert-item:hover::before {
-            left: 100%;
-        }
-
-        .cert-item::after {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            height: 3px;
-            background: linear-gradient(90deg, var(--primary-color), var(--secondary-color));
-            transform: scaleX(0);
-            transition: transform 0.3s ease;
-        }
-
-        .cert-item:hover::after {
-            transform: scaleX(1);
-        }
 
         .cert-item:hover {
             transform: translateY(-8px);
@@ -818,57 +793,18 @@
             box-shadow: 0 20px 40px var(--accent-glow);
         }
 
-        /* Certificate Section Enhancements */
-        .cert-item {
-            transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-            position: relative;
-            overflow: hidden;
-            border-radius: 10px;
-        }
 
-        .cert-item::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background: linear-gradient(45deg, var(--primary-color), var(--secondary-color));
-            opacity: 0;
-            transition: opacity 0.3s ease;
-            z-index: 1;
-        }
-
-        .cert-item:hover::before {
-            opacity: 1;
-        }
-
-        .cert-item::after {
-            content: '🔗';
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            font-size: 2rem;
-            opacity: 0;
-            transition: opacity 0.3s ease;
-            z-index: 2;
-        }
-
-        .cert-item:hover::after {
-            opacity: 1;
-        }
-
-        .cert-item:hover img {
-            transform: scale(1.1);
-            box-shadow: 0 15px 35px var(--accent-glow);
-        }
 
         /* Scroll-triggered animations */
         .fade-in {
+            opacity: 1;
+            transform: translateY(0);
+            transition: all 0.6s ease;
+        }
+
+        .fade-in.animate-in {
             opacity: 0;
             transform: translateY(30px);
-            transition: all 0.6s ease;
         }
 
         .fade-in.visible {
@@ -1236,7 +1172,7 @@
 
 
 <!-- Certificate Section -->
-<section class="certificates fade-in">
+<section class="certificates">
     <div class="container">
         <h2>Professional Certifications</h2>
         <div class="cert-scroll">
