--- a/index.html
+++ b/index.html
@@ -962,10 +962,10 @@
                 <div class="hero-text">
                     <div class="status-badge">
                         <i class="fas fa-circle" style="color: #10b981; font-size: 0.5rem; margin-right: 0.5rem;"></i>
-                        Available for opportunities
+                        Hello Geeks
                     </div>
                     <h1>Cloud Engineer</h1>
-                    <p>Architecting and managing scalable cloud infrastructure with a strong foundation in Linux. Passionate about building secure, efficient, and resilient environments using modern practices.</p>
+                    <p>Architecting and managing scalable AWS cloud infrastructure with a strong foundation in Linux. Passionate about building secure, efficient, and resilient environments using modern practices.</p>
                     <div class="hero-buttons">
                         <a href="#projects" class="btn btn-primary">
                             View Projects
