--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     
     <style>
-        /* Base Styles - Dark Mode Theme */
+        /* Base Styles - Monochrome Pro */
         :root {
-            --primary-color: #06b6d4;
-            --secondary-color: #8b5cf6;
-            --text-color: #f8fafc;
-            --light-text: #94a3b8;
-            --background: #0f172a;
-            --card-background: #1e293b;
-            --border-color: #334155;
-            --hover-color: #0891b2;
-            --accent-glow: rgba(6, 182, 212, 0.2);
-            --violet-glow: rgba(139, 92, 246, 0.2);
+            --primary-color: #ffffff;
+            --secondary-color: #6b7280;
+            --text-color: #ffffff;
+            --light-text: #9ca3af;
+            --background: #0a0a0a;
+            --card-background: #1a1a1a;
+            --border-color: #374151;
+            --hover-color: #f3f4f6;
+            --accent-glow: rgba(255, 255, 255, 0.1);
+            --secondary-glow: rgba(107, 114, 128, 0.2);
         }
 
         * {
@@ -77,10 +77,10 @@
         }
 
         .navbar.scrolled {
-            background: rgba(15, 23, 42, 0.9);
+            background: rgba(10, 10, 10, 0.9);
             backdrop-filter: blur(10px);
             border-bottom: 1px solid var(--border-color);
-            box-shadow: 0 4px 20px rgba(6, 182, 212, 0.1);
+            box-shadow: 0 4px 20px rgba(255, 255, 255, 0.1);
         }
 
         .navbar .container {
@@ -188,7 +188,7 @@
         /* About Section */
         .about {
             padding: 6rem 0;
-            background: linear-gradient(135deg, #0c1425, var(--background));
+            background: linear-gradient(135deg, #111111, var(--background));
         }
 
         .about-content {
@@ -292,7 +292,7 @@
 
         .btn-primary {
             background-color: var(--primary-color);
-            color: white;
+            color: var(--background);
         }
 
         .btn-primary:hover {
@@ -312,7 +312,7 @@
         /* Blog Section */
         .blogs {
             padding: 4rem 0;
-            background: linear-gradient(to bottom, var(--background), #0c1425);
+            background: linear-gradient(to bottom, var(--background), #111111);
             min-height: 50vh;
         }
 
@@ -357,7 +357,7 @@
 
         .tag {
             padding: 0.25rem 0.75rem;
-            background-color: var(--border-color);
+            background-color: #2d2d2d;
             border-radius: 9999px;
             font-size: 0.875rem;
             color: var(--light-text);
@@ -409,7 +409,7 @@
         .level {
             display: inline-block;
             padding: 0.25rem 0.75rem;
-            background-color: var(--border-color);
+            background-color: #2d2d2d;
             border-radius: 9999px;
             font-size: 0.875rem;
             color: var(--light-text);
@@ -419,7 +419,7 @@
         /* Contact Section */
         .contact {
             padding: 4rem 0;
-            background: linear-gradient(to bottom, #0c1425, var(--background));
+            background: linear-gradient(to bottom, #111111, var(--background));
             min-height: 40vh;
         }
 
@@ -465,7 +465,7 @@
         /* Certificates Section - Modern Design */
         .certificates {
             padding: 6rem 0;
-            background: linear-gradient(135deg, var(--background), #0c1425);
+            background: linear-gradient(135deg, var(--background), #111111);
             position: relative;
             overflow: hidden;
         }
@@ -478,8 +478,8 @@
             right: 0;
             bottom: 0;
             background: radial-gradient(circle at 30% 20%, var(--accent-glow), transparent 50%),
-                        radial-gradient(circle at 70% 80%, var(--violet-glow), transparent 50%);
-            opacity: 0.1;
+                        radial-gradient(circle at 70% 80%, var(--secondary-glow), transparent 50%);
+            opacity: 0.5;
             z-index: 0;
         }
 
@@ -533,7 +533,7 @@
             border-radius: 0.5rem;
             margin-bottom: 1rem;
             transition: all 0.3s ease;
-            background: rgba(255, 255, 255, 0.05);
+            background: #2d2d2d;
             padding: 1rem;
         }
 
@@ -600,6 +600,7 @@
                 background: var(--card-background);
                 padding: 1rem;
                 border-bottom: 1px solid var(--border-color);
+                box-shadow: 0 4px 6px rgba(255, 255, 255, 0.05);
             }
 
             .nav-links.active {
@@ -721,7 +722,7 @@
             left: -100%;
             width: 100%;
             height: 100%;
-            background: linear-gradient(90deg, transparent, var(--accent-glow), transparent);
+            background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.05), transparent);
             transition: left 0.6s;
         }
 
@@ -777,7 +778,7 @@
             left: 50%;
             width: 0;
             height: 0;
-            background: radial-gradient(circle, var(--accent-glow), transparent);
+            background: radial-gradient(circle, rgba(255, 255, 255, 0.05), transparent);
             transition: all 0.4s ease;
             transform: translate(-50%, -50%);
             border-radius: 50%;
